...
                    app:autoSizeTextType="uniform" />

            </LinearLayout>


            <ImageView
                android:id="@+id/deleteButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/ic_delete_24" />
        </RelativeLayout>
...
